[package]
authors = ["Alex Rutar <alex@rutar.org>"]
name = "lockstep"
description = "An iterator adaptor for selective zipping"
keywords = ["iterator", "data-structure", "zip", "product"]
categories = ["algorithms", "rust-patterns", "no-std"]
license = "MIT OR Apache-2.0"
version = "0.2.0"
edition = "2021"
